package santorini;

public record BoardSnapshot(int[][] heightGrid, Worker[][] workerGrid) {
}
