package santorini;

public class Main {
    public static void main(String[] args) {
        SantoriniApp.main(args);
    }
}
